--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: au-uk.com
-matrix: au-uk.com
+title: au-uk
+matrix: au-uk
 description: >- # this means to ignore newlines until "baseurl:"
   An engineering blog, for engineers.
 baseurl: "" # the subpath of your site, e.g. /blog
