--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: au-uk
-matrix: au-uk
+title: AU-UK Engineering Tips From Top to Bottom.
 description: >- # this means to ignore newlines until "baseurl:"
   An engineering blog, for engineers.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-matrix_username: au-uk
 github_username:  au-uk
 
 # Build settings
