--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: AU-UK Engineering Tips From Top to Bottom.
+title: Engineering tips from top to bottom.
 description: >- # this means to ignore newlines until "baseurl:"
   An engineering blog, for engineers.
 baseurl: "" # the subpath of your site, e.g. /blog
